test_suite/tests/ui/fail/misplace_attribute/misplace_option.rs
use clapi::macros::*;

#[option(name, alias="n")]
fn app(name: String){}

fn main(){}